update main html file

--- a/index.html
+++ b/index.html
@@ -6,10 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
+    <div class="title">
+        <h1>STARWARS</h1>
+        <h3>This is a template of using StarWars API to show the first 5 characters</h3>
+        <p align=center>
+            <input type="text" placeholder="Character Name">
+            <button color="yellow">Click here to search</button>
+        </p>
+    </div>
+    <div class="fade">
+        <section class="starwars">
+            <div class="crawl">
+            </div>
+        </section>
+    </div>
 
+    <div>
+
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
